--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,21 @@
+amqp==5.1.1
 asgiref==3.4.1
+billiard==3.6.4.0
+celery==5.2.7
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 Django==3.2.7
+flower==1.1.0
+humanize==4.2.3
+kombu==5.2.4
 Pillow==9.0.0
+prometheus-client==0.14.1
+prompt-toolkit==3.0.30
 pytz==2021.3
+six==1.16.0
 sqlparse==0.4.2
+tornado==6.2
+vine==5.0.0
+wcwidth==0.2.5
