--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ click-plugins==1.1.1
 click-repl==0.2.0
 cssselect2==0.6.0
 Django==3.2.7
+django-localflavor==3.1
 django-parler==2.3
 django-rosetta==0.9.8
 flower==1.1.0
@@ -28,6 +29,7 @@ prompt-toolkit==3.0.30
 pycparser==2.21
 pydyf==0.2.0
 pyphen==0.12.0
+python-stdnum==1.17
 pytz==2021.3
 requests==2.28.1
 six==1.16.0
